fixed div misalignment

--- a/layout.css
+++ b/layout.css
@@ -38,10 +38,9 @@ body {
 	align: center;
 	
 	padding: 10px;
-	width: 85%;
+	width: 83.7%;
 	height: 15%;
-	margin-top: 0px;
-    margin-left: 100px;
+	margin: auto;
 	background-color: black;
 	font-family: Trebuchet MS, Helvetica, sans-serif;
 	color: #FFEBCD;
